tests/paczka1/small_fuzzy/86189526.err
Error in line 1: KmX8HxBso S673 73,4
Error in line 10: VwBk A602 3,9
Error in line 12: UXadbQigz S673 47,1
